0026871: [Regression in 6.9.0] Projecting a curve hangs inside Approx_FitAndDivide2d

Fix checking of B-spline parametrization speed

Test case for issue CR26871